--- a/app/src/main/res/layout/view_mainsetmealother.xml
+++ b/app/src/main/res/layout/view_mainsetmealother.xml
@@ -20,12 +20,12 @@
         android:background="@color/blackgroundmain" />
 
     <LinearLayout
-        android:layout_marginTop="@dimen/dimen_30dp"
-        android:layout_marginLeft="@dimen/dimen_20dp"
-        android:layout_marginRight="@dimen/dimen_20dp"
-        android:layout_marginBottom="@dimen/dimen_30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/dimen_30dp"
+        android:layout_marginLeft="@dimen/dimen_20dp"
+        android:layout_marginRight="@dimen/dimen_20dp"
+        android:layout_marginTop="@dimen/dimen_30dp"
         android:orientation="horizontal">
 
         <TextView
@@ -35,23 +35,44 @@
             android:textSize="@dimen/dimen_30dp" />
 
         <TextView
+            android:id="@+id/tv_setmeal"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dimen_46dp"
             android:layout_weight="1"
-            android:text="流芳（居家）"
             android:textSize="@dimen/dimen_30dp" />
 
         <Button
+            android:id="@+id/bt_changesetmeal"
             android:layout_width="@dimen/dimen_150dp"
             android:layout_height="@dimen/dimen_46dp"
-            android:background="@drawable/zhy_button_bg"
+            android:background="@drawable/zhy_button_state_1"
             android:text="更改"
             android:textColor="@color/blackgroundmain"
             android:textSize="@dimen/dimen_30dp" />
 
     </LinearLayout>
+
     <TextView
-        android:background="@color/zhy_line"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dimen_1dp" />
+        android:layout_height="@dimen/dimen_1dp"
+        android:background="@color/zhy_line" />
+
+    <TextView
+        android:id="@+id/tv_classifyname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dimen_20dp"
+        android:layout_marginTop="@dimen/dimen_30dp"
+        android:text="套餐类目"
+        android:textSize="@dimen/dimen_30dp" />
+
+    <com.shian.shianlife.view.ScrollListView
+        android:id="@+id/listview_data"
+        android:layout_width="match_parent"
+        android:dividerHeight="@dimen/dimen_0dp"
+        android:divider="@null"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/dimen_20dp"
+        android:scrollbars="none"></com.shian.shianlife.view.ScrollListView>
+
 </LinearLayout>
