--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -37,8 +37,10 @@
     <color name="chlickcolor">#f4dc5f</color>
     <color name="main_blackground">#ECECEC</color>
     <color name="cemetery_textcolor">#83e69f</color>
-    <color name="zhy_line">#898989</color>
+    <color name="zhy_line">#dfdfdf</color>
+    <color name="zhy_line_2">#898989</color>
     <color name="cemetery_titlecolor">#f6c858</color>
+    <color name="gray_text">#767676</color>
     <!-- Dialog Color -->
     <color name="version_msg_color">#ff6699ff</color>
     <color name="message_color">#ffccccff</color>
