--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -74,6 +74,22 @@
 
     </style>
 
+    <style name="CustomDialogBottom" parent="android:style/Theme.Dialog">
+        <!--背景颜色及透明程度-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--是否有标题 -->
+        <item name="android:windowNoTitle">true</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否模糊-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFrame">@null</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:layout_gravity">bottom</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
     <style name="TableText">
         <item name="android:textSize">@dimen/txtsize_22sp</item>
         <item name="android:gravity">center</item>
@@ -112,12 +128,19 @@
         <item name="android:textSize">@dimen/txtsize_30sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
     <style name="cemetery_text_style_title_1">
         <item name="android:textSize">@dimen/txtsize_33sp</item>
         <item name="android:textColor">@color/cemetery_titlecolor</item>
     </style>
+
     <style name="cemetery_text_style_3_nonecessary">
         <item name="android:textSize">@dimen/txtsize_27sp</item>
         <item name="android:textColor">@color/cemetery_textcolor</item>
+    </style>
+
+    <style name="dialogWindowAnim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/dialog_enter_anim</item>
+        <item name="android:windowExitAnimation">@anim/dialog_exit_anim</item>
     </style>
 </resources>
