--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -45,7 +45,7 @@
 
         <com.shian.shianlife.common.view.editor.MainSetmealView
             android:id="@+id/msv"
-
+            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/dimen_20dp"
