--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                     android:layout_width="@dimen/dimen_40dp"
                     android:layout_height="@dimen/dimen_40dp"
                     android:layout_alignParentRight="true"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black_item_shua_textcolor"
                     android:gravity="center"
                     android:ems="2"
                     android:layout_marginTop="@dimen/dimen_1dp"
