--- a/app/src/main/res/layout/view_mainsetmealother_listview_items.xml
+++ b/app/src/main/res/layout/view_mainsetmealother_listview_items.xml
@@ -5,12 +5,15 @@
     android:orientation="vertical">
 
     <TextView
+        android:paddingLeft="@dimen/dimen_20dp"
+        android:paddingRight="@dimen/dimen_20dp"
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/dimen_26dp" />
 
     <com.shian.shianlife.view.ScrollListView
+        android:layout_marginBottom="@dimen/dimen_20dp"
         android:id="@+id/listview_data"
         android:divider="@null"
         android:dividerHeight="@dimen/dimen_0dp"
