--- a/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
+++ b/app/src/main/res/layout/view_mainsetmealother_listview_items_items.xml
@@ -42,6 +42,8 @@
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_marginLeft="@dimen/dimen_20dp"
+            android:layout_marginRight="@dimen/dimen_20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="right"
@@ -65,6 +67,8 @@
         </LinearLayout>
 
         <TextView
+            android:layout_marginLeft="@dimen/dimen_20dp"
+            android:layout_marginRight="@dimen/dimen_20dp"
             android:id="@+id/tv_num"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -73,6 +77,8 @@
             android:textSize="@dimen/dimen_26dp" />
 
         <TextView
+            android:layout_marginLeft="@dimen/dimen_20dp"
+            android:layout_marginRight="@dimen/dimen_20dp"
             android:id="@+id/tv_money"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
